# sw-battle

./: .gitignore  CMakeLists.txt  README.md  build.sh  commands_example copy.txt  commands_example.txt
examples/: commands_example_print.txt
src/: main.cpp
src/GameManager/: CoreFunctions.hpp  GameManager.cpp  GameManager.hpp  GameSystem.cpp  GameSystem.hpp  IGameExecutor.hpp  IGameSystem.hpp  LoggableGameSystem.cpp  LoggableGameSystem.hpp
src/GameManager/Command/: CmdDescriptions.hpp  IUnitCommand.hpp
src/GameManager/Executors/: CoreFunctions.hpp
src/GameManager/Executors/Default/: CommandHandlers.cpp  GameExecutor.cpp  GameExecutor.hpp
src/GameManager/Executors/Loggable/: CommandHandlers.cpp  LoggableGameExecutor.cpp  LoggableGameExecutor.hpp
src/IO/Commands/: WaitPrintMap.hpp
src/IO/EventLogs/: MapCreated.hpp
src/IO/System/: CommandParser.hpp  EventLog.hpp
src/Map/: Coords.hpp  IMap.hpp  LoggableMap.hpp  Map.hpp
src/Units/: IUnit.hpp  LoggableUnit.hpp  Unit.cpp  Unit.hpp  UnitBuilder.hpp  UnitTypes.hpp
src/Units/BuilderTemplates/: DefaultFunctions.cpp  DefaultFunctions.hpp  DefaultUnitsBuilders.hpp
tests/: CMakeLists.txt
tests/src/: TestCommand.cpp  TestGame.cpp  TestMap.cpp  TestUnit.cpp
